Se hizo la conexion y se hizo parte de la logica de cartas